--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </div>
                 <div class="food"><img loading="lazy" src="food2/food8.png" alt="Food 8">
                     <strong>
-                        chicken kari
+                        chicken curry
                     </strong>
                 </div>
             </div>
@@ -137,7 +137,7 @@
     </div>
     <div class="femous topfood">
         <!-- <h2>top in restaurant</h2> -->
-        <h1>Papular in Restaurant</h1>
+        <h1>Popular in Restaurant</h1>
         <div class="items">
 
             <div class="food1">
